Fixing broken footer image code, adjusting spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,7 @@ img{
 
 .homepage_intro{
 	background-color: #e9e9e9;
-	padding: 0 18px 18px 18px;
+	padding: 18px;
 	border-radius: 5px;
 	line-height: 1.5em;
 }
